Show two numbers from branching function
